Scan only upon browser request

--- a/config/config.ini
+++ b/config/config.ini
@@ -3,12 +3,14 @@
 [Authentication]
 # ptc or google
 Service: ptc
-Username: 
-Password: 
+Username: vkampouris
+Password: lineage2
+Usernames: vkampouris,vkampouris,vkampouris,vkampouris,vkampouris
+Passwords: lineage2,lineage2,lineage2,lineage2,lineage2
 
 [Search_Settings]
-Steps: 12
-Location: 
+Steps: 5
+Location: athens
 #Time delay before beginning new scan
 Scan_delay: 1
 
