--- a/config/config.ini
+++ b/config/config.ini
@@ -16,6 +16,6 @@ Scan_delay: 1
 
 [Misc]
 #you need a google maps api key to run this!
-Google_Maps_API_Key :
-Host: 127.0.0.1
+Google_Maps_API_Key : AIzaSyC8K3OlBci00GE-3KXg6vbVCaoYgRDzvwY
+Host: 0.0.0.0
 Port: 5000
