--- a/config/config.ini
+++ b/config/config.ini
@@ -3,10 +3,10 @@
 [Authentication]
 # ptc or google
 Service: ptc
-Username: vkampouris
-Password: lineage2
-Usernames: vkampouris,vkampouris,vkampouris,vkampouris,vkampouris
-Passwords: lineage2,lineage2,lineage2,lineage2,lineage2
+Username: pokemown1
+Password: pokemown@1
+Usernames: pokemown1,pokemown1,pokemown1,pokemown1,pokemown1
+Passwords: pokemown@1,pokemown@1,pokemown@1,pokemown@1,pokemown@1
 
 [Search_Settings]
 Steps: 5
