--- a/config/config.ini
+++ b/config/config.ini
@@ -5,8 +5,8 @@
 Service: ptc
 Username: pokemown1
 Password: pokemown@1
-Usernames: pokemown1,pokemown1,pokemown1,pokemown1,pokemown1
-Passwords: pokemown@1,pokemown@1,pokemown@1,pokemown@1,pokemown@1
+Usernames: pokemown1,pokemown2
+Passwords: pokemown@1,pokemown@2
 
 [Search_Settings]
 Steps: 5
